--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="utf-8">
+    <title>CSS Units: VW, FR</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+
+<div class="main">
+    <div class="one">
+        <a href="https://github.com/llisowska/docs"><font face="Monotype Corsiva" size="7" color="navy">Kuchnia gruzińska</font></a>
+    </div>
+    <div class="two">
+
+    </div>
+    <div class="three">
+
+    </div>
+    <div class="four">
+
+    </div>
+    <div class="five">
+
+    </div>
+</div>
+
+</body>
+</html>
 
